# api-service-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.module_name}}/: .env.test  .pre-commit-config.yml  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.module_name}}/.github/: CODEOWNERS
{{cookiecutter.module_name}}/.github/ISSUE_TEMPLATE/: 0-task.md  config.yml
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/: main.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/api/: api.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/api/routers/: __init__.py  health.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/core/: config.py  security.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/crud/: __init__.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/app/schemas/: __init__.py  base.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/scripts/: test_echo.sh
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/tests/: conftest.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name_underscored}}/tests/api/: __init__.py  test_health.py
